--- a/css/Style-contacto.css
+++ b/css/Style-contacto.css
@@ -1,3 +1,10 @@
+/*---------------- RESETEO ---------------- */ 
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
 /*---------------- CONTACTO ---------------- */ 
         
