--- a/css/Style-inicio.css
+++ b/css/Style-inicio.css
@@ -126,7 +126,7 @@
             .texto-seccion2 {
                 text-align: center;
             }
-            .seccion2 {
+            .seccion3-articulos {
                 flex-direction: column;
             }
 
