--- a/css/Texto.css
+++ b/css/Texto.css
@@ -12,7 +12,11 @@
     }
 
     .gris {
-        color: #EFEFEF;
+        color: #D1D0CF;
+    }
+
+    .gris {
+        color: #D1D0CF;
     }
 
     .blanco {
