--- a/bootstrap/blog.css
+++ b/bootstrap/blog.css
@@ -16,56 +16,104 @@
     user-select: none;
   }
 
-.seccion1-blog {
-    background-image: url(../img/Fondo_Seccion1_Home.jpg);
-            background-size: cover;
-            display: flex;
-            
-}
 
-.texto-seccion1-blog {
-    color: #ffffff;
+    /* Sección 1 */
+
+        .seccion1-blog {
+            background-image: url(../img/Fondo_Seccion1_Home.jpg);
+                    background-size: cover;
+                    display: flex;
+                    
+        }
+
+        .texto-seccion1-blog {
+            color: #ffffff;
+                    justify-content: center;
+                    align-items: center;
+        }
+
+    /* Sección 2 */
+
+        .texto-seccion2 {
+            color: #ffffff;
             justify-content: center;
             align-items: center;
-}
+        }
 
-.seccion2-blog {
-    background-image: url(../img//Fondo_Seccion_2_blog.jpg);
+        .imagen-seccion2 {
+            width: 24rem;
+            border-radius: 2rem;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .seccion2 {
+            background-image: url(../img/Fondo_Seccion_2-4_Home.jpg);
             background-size: cover;
             display: flex;
             margin: 0 0 2rem 0;
-}
+        }
 
-.columna1-seccion2-blog {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        .columna1-seccion2 {
+            width: 60%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.columna2-seccion2-blog {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        .columna2-seccion2 {
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 
-.imagen-seccion2-blog {
-    width: 24rem;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+        /* Media queries (Pantallas inferiores) */
 
-@media screen and (max-width: 950px) and (min-width: 540px) {
-    .imagen-seccion2-blog {
-        width: 18rem;
-    }
-}
+        @media screen and (max-width: 950px) { 
 
-@media screen and (max-width: 540px) {
-    .imagen-seccion2-blog {
-        width: 14rem;
-    }
-} 
+            .texto-seccion2 {
+                text-align: center;
+            }
+            .seccion3-articulos {
+                flex-direction: column;
+            }
+
+            .columna1-seccion2, .columna2-seccion2 {
+                width: 100%;
+            }
+            
+            .columna1-seccion2 {
+                order: 1;
+            
+            }
+            
+            .columna2-seccion2 {
+                order: 2;
+            }
+        }
+
+        @media screen and (max-width: 950px) and (min-width: 540px) {
+            .imagen-seccion2 {
+                width: 18rem;
+            }
+        }
+
+        @media screen and (max-width: 540px) {
+            .imagen-seccion2 {
+                width: 14rem;
+            }
+        }
+    /* Sección 3 */
+        .continuar-leyendo a {
+            color: #39A388;
+            font-size: small;
+        }
+
+        .continuar-leyendo a:hover {
+            color: #EFEFEF;
+        }
+
+        
