--- a/css/Style.css
+++ b/css/Style.css
@@ -131,6 +131,61 @@
                     }
                 }
 
+    /* --SUB MENU-- */
+                .submenu {
+                    background-color: #000000;
+                    padding: 1.5rem 0 1rem 0;
+                }
+                .container-Submenu {
+                    display: flex;
+                    flex-direction: row;
+                    text-align: center;
+                    align-items: center;
+                    justify-content: center;
+                } 
+
+                .submenu  a {
+                    color: #ffffff;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                }
+        
+                .submenu a.active {
+                    color: #F26C23;
+                }
+        
+                .submenu a:hover {
+                    color: #F26C23; 
+                }
+                
+                .submenu nav ul {
+                    list-style: none;
+                    margin: 0;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                }
+                
+                .submenu nav li {
+                    margin-left: 15px;
+                }
+
+                /* Media queries (Pantallas inferiores) */
+
+                @media screen and (max-width: 768px) {
+                    .container-Submenu {
+                        flex-direction: column;
+                        gap: 1rem;
+                    }
+                }
+                @media screen and (max-width: 540px) {
+                    .submenu nav ul {
+                        flex-direction: column;
+                    }
+                }
+
+
 
     /* --FOOTER-- */
 
