--- a/css/Style-inicio.css
+++ b/css/Style-inicio.css
@@ -441,3 +441,69 @@
                     margin: 0;
                 }
             }
+
+/* Estilos para la ventana modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  .modal-content {
+    background-color: #fff;
+    margin: 18rem auto;
+    padding: 3rem;
+    border-radius: 25px;
+    width: 50%;
+    text-align: center;
+    transform: translateY(-50px);
+    animation: fadeIn 0.3s ease forwards;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  
+  .close {
+    color: #39A388;
+    font-size: 24px;
+    font-weight: bold;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    cursor: pointer;
+  }
+  
+  .close:hover {
+    color: #3F8C76;
+  }
+  
+  #closeModalBtn {
+    background-color: #39A388;
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 15px;
+    border: none;
+    cursor: pointer;
+    margin-top: 20px;
+  }
+  
+  #closeModalBtn:hover {
+    background-color: #3F8C76;
+  }
+  
+  @media screen and (max-width: 768px) { 
+    .modal-content {
+        padding: 2.5rem 0.5rem;
+      }
+   }
