--- a/css/Style-recursos.css
+++ b/css/Style-recursos.css
@@ -8,6 +8,7 @@
 
 /*---------------- RECURSOS---------------- */ 
 
+
     /* Sección 1 */
 
     .seccion1 {
@@ -387,7 +388,6 @@
     margin-right: 10px; /* Ajusta el espaciado entre la imagen y el nombre */
   }
   
-
   .respuesta {
     background-color: #ffffff;
     border-radius: 15px;
@@ -466,11 +466,7 @@
       align-self: center;
     }
 
-    
   }
-  
-  
-  
    
 /* --formulario-- */ 
 .form {
@@ -488,6 +484,7 @@
     margin-bottom: 10px;
     color: #5a5a5a;
     font-weight: medium;
+    margin-bottom: 1rem;
   }
   
   .input-field,
