--- a/css/Style-contacto.css
+++ b/css/Style-contacto.css
@@ -183,50 +183,54 @@
                         padding: 0;
                     }  
 
-                /* --formulario-- */ 
-                .form {
-                    justify-content: center;
-                    align-items: center;
-                    background-color: #000000;
-                    border-radius: 15px;
-                    padding: 2rem;
-                    margin: 2rem;
-                    width: 100%;
-                  }
-                  
-                  .form label {
-                    display: block;
-                    margin-bottom: 10px;
-                    color: #ffffff;
-                    font-weight: medium;
-                  }
-                  
-                  .input-field,
-                  textarea {
-                    display: block;
-                    width: 100%;
-                    padding: 10px;
-                    margin-bottom: 10px;
-                    background-color: #ffffff;
-                    border: none;
-                    border-radius: 15px;
-                    color: #5a5a5a;
-                  }
-                  
-                  button {
-                    background-color: #39A388;
-                    color: #ffffff;
-                    padding: 10px 20px;
-                    border-radius: 15px;
-                    border: none;
-                    cursor: pointer;
-                  }
-                  
-                  button:hover {
-                    background-color: #3F8C76;
-                  }
-                  
-                  
+                /* --formulario-- */ .form {
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+  border-radius: 15px;
+  padding: 2rem;
+  margin: 2rem;
+  width: 100%;
+}
+
+.form label {
+  display: block;
+  margin-bottom: 10px;
+  color: #ffffff;
+  font-weight: medium;
+}
+
+.input-field,
+textarea {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #ffffff;
+  border: none;
+  border-radius: 15px;
+  color: #5a5a5a;
+}
+
+button {
+  background-color: #39A388;
+  color: #ffffff;
+  padding: 10px 20px;
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3F8C76;
+}
+
+.mensaje {
+  color: #ffffff;
+  margin-top: 1rem;
+  text-align: center;
+}
+
 
                 /* Columna 2 Grid Recursos */ 
                 .imagen-seccion3-contacto {
