--- a/css/Style-recursos.css
+++ b/css/Style-recursos.css
@@ -329,7 +329,7 @@
       }
       
       .contenido a:hover {
-        color: #D35822;
+        color: #ffffff;
         text-decoration: none;
       }
       .contenido h5{
