--- a/css/Style-sesion.css
+++ b/css/Style-sesion.css
@@ -74,11 +74,11 @@ textarea {
 
 .buttons button {
   color: #ffffff;
-  background-color: #39A388;
+  background-color: #F26C23;
 }
 
 .buttons button:hover {
-  background-color: #3F8C76;
+  background-color: #D35822;
 }
 
 .buttons a {
