--- a/css/Style-nosotros.css
+++ b/css/Style-nosotros.css
@@ -95,16 +95,17 @@
             align-items: center;
             text-align: center;
             }
-
             .container-equipo {
                 flex-direction: column;
+                margin-bottom: 1rem;
+                
             }
     
             .grid-equipo {
                 display: grid;
                 grid-template-columns: repeat(2, 1fr);
                 grid-template-rows: repeat(1, 1fr);
-                grid-gap: 10px;
+                grid-gap: 4rem;
                 }
     
                 /*generales Grid Recursos */ 
